# Aprenda-Grafos

./: .gitignore  README.md
back-end/: Dockerfile  pyproject.toml
back-end/data/: graph.json  output_graph.json
back-end/src/back_end/: app.py  graph_json_util.py  graph_parser.py
back-end/src/back_end/algorithms/: BFS.py  DFS.py  algorithm.py  bfs.py  dfs.py  dijkstra.py
front-end/: Dockerfile  index.html  package-lock.json  package.json
front-end/public/grafos/: grafo0.json  grafo1.json  grafo2.json  grafoadjusted.json  newgraph.json
front-end/src/: App.jsx  main.css  main.jsx
front-end/src/components/AnimationControl/: AnimationControl.css  AnimationControl.jsx
front-end/src/components/Body/: Body.css  Body.jsx
front-end/src/components/ButtonContainer1/: ButtonContainer1.css  ButtonContainer1.jsx
front-end/src/components/ButtonContainer2/: ButtonContainer2.css  ButtonContainer2.jsx
front-end/src/components/ButtonFirstPage/: ButtonFirstPage.css  ButtonFirstPage.jsx
front-end/src/components/ButtonHelp/: ButtonHelp.css  ButtonHelp.jsx
front-end/src/components/ButtonMainPage/: ButtonMainPage.css  ButtonMainPage.jsx
front-end/src/components/ContextMenu/: ContextMenu.css  ContextMenu.jsx
front-end/src/components/Footer/: Footer.css  Footer.jsx
front-end/src/components/GraphNode/: GraphNode.css  GraphNode.jsx
front-end/src/components/Header/: Header.css  Header.jsx
front-end/src/hooks/: GraphManager.jsx
front-end/src/mocks/: explicacoes.json  pseudocodigos.json
front-end/src/pages/FirstPage/: FirstPage.css  (+1 more)
front-end/src/utils/: Graph.js
(+8 files in other folders)
