[project]
name = "back-end"
version = "0.1.0"
description = ""
authors = [
    {name = "FelipePassarela",email = "126916744+FelipePassarela@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "networkx (>=3.5,<4.0)",
    "flask (>=3.1.1,<4.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "back_end", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
